--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
-title: [Graziano Blasilli]
-description: [This is the website of Graziano Blasilli]
+title: Graziano Blasilli
+description: This is the website of Graziano Blasilli.
 show_downloads: false
-google_analytics: [G-PGDLTGVM20]
+google_analytics: G-PGDLTGVM20
