--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,6 @@ plugins:
   - jekyll-remote-theme
 title: Graziano Blasilli
 description: This is the website of Graziano Blasilli.
+logo: /assets/img/logo.png
 show_downloads: false
 google_analytics: G-PGDLTGVM20
