--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
 title: Graziano Blasilli
-description: This is the website of Graziano Blasilli.
+description:
 logo: /assets/img/logo.png
 show_downloads: false
 google_analytics: G-PGDLTGVM20
