--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+  - jekyll-remote-theme
 title: Graziano Blasilli
-logo: /assets/img/logo.png
 description:
+logo: /assets/img/logo.png
 show_downloads: false
 google_analytics: G-PGDLTGVM20
-theme: jekyll-theme-minimal
