--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
 title: Graziano Blasilli
-shortDescription: PhD Stundent in Visual Analytics and Cybersecurity at Sapienza Università di Roma.
+shortDescription: PhD Student in Visual Analytics and Cybersecurity at Sapienza Università di Roma.
 description:
 logo: /assets/img/logo.png
 show_downloads: false
