--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ plugins:
   - jekyll-remote-theme
 title: Graziano Blasilli
 shortDescription: PhD Student in Visual Analytics and Cybersecurity at Sapienza Università di Roma.
-description:
+description: PhD Student in Visual Analytics and Cybersecurity at Sapienza Università di Roma.
 logo: /assets/img/logo.png
 show_downloads: false
 google_analytics: G-PGDLTGVM20
