--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ plugins:
 title: Graziano Blasilli
 shortDescription: PhD Student in Visual Analytics and Cybersecurity at Sapienza Università di Roma.
 description: PhD Student in Visual Analytics and Cybersecurity at Sapienza Università di Roma.
-logo: /assets/img/me.png
+logo: /assets/img/me.jpg
 logoSmall: /assets/img/me_small.jpg
 show_downloads: false
 google_analytics: G-PGDLTGVM20
