--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ description: Postdoctoral Researcher at Sapienza Università di Roma.
 logo: /assets/img/me.jpg
 logoSmall: /assets/img/me_small.jpg
 show_downloads: false
-google_analytics: G-PGDLTGVM20
+google_analytics: G-QETF58JLXY
