--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
 title: Graziano Blasilli
-shortDescription: Postdoctoral Researcher at Sapienza Università di Roma.
-description: Postdoctoral Researcher at Sapienza Università di Roma.
+shortDescription: Assistant Professor at Sapienza Università di Roma.
+description: Assistant Professor at Sapienza Università di Roma.
 logo: /assets/img/me.jpg
 logoSmall: /assets/img/me_small.jpg
 show_downloads: false
